--- a/public/contacto.html
+++ b/public/contacto.html
@@ -62,17 +62,9 @@
 
 
                     </li>
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-store-alt"></i>
-                            Tiendas
-                        </a>
-                        <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="#caba">CABA</a></li>
-                            <li><a class="dropdown-item" href="#norte">Zona Norte</a></li>
-                            <li><a class="dropdown-item" href="#oeste">Zona Oeste</a></li>
-                            <li><a class="dropdown-item" href="#sur">Zona Sur</a></li>
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./tiendas.html"><i class="fas fa-store-alt"></i>
+                            Tiendas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/contacto.html" tabindex="-1" aria-disabled="true"> <i
@@ -85,7 +77,7 @@
 
     <!-- ------------------Cuerpo--------------------- -->
     <form action="" class="formulario">
-        <h3 class="formulario-titulo">Contáctenos</h3>
+        <h3 class="formulario-titulo">Contactanos</h3>
         <input type="text" class="formulario-input">
         <label for="" class="formulario-label">Nombre</label>
 
@@ -93,9 +85,11 @@
         <label for="" class="formulario-label">Correo</label>
 
         <input type="tel" class="formulario-input">
-        <label for="" class="formulario-label">Telefono</label>
+        <label for="" class="formulario-label">Teléfono</label>
 
-        <input type="text" class="formulario-input">
+
+        <!-- <textarea class="formulario-input" id="exampleFormControlTextarea1"></textarea> -->
+        <input type="text" class="formulario-input" rows="3">
         <label for="" class="formulario-label">Mensaje</label>
 
         <input type="submit" class=" btn formulario-submit" placeholder="Enviar">
