--- a/public/desayuno.html
+++ b/public/desayuno.html
@@ -87,7 +87,7 @@
 
        <!-----------------------------------------CUERPO DESAYUNO-------------------------------------------->
        <section id="desayuno" class="desayuno container">
-        <h1>&mdash;Desayuno&mdash; o &mdash;Merienda&mdash; </h1>
+        <h1>&mdash;Desayuno&mdash; <br> o <br> &mdash;Merienda&mdash; </h1>
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col receta">
                 <div class="card">
