--- a/public/tiendas.html
+++ b/public/tiendas.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display&display=swap" rel="stylesheet">
+    <!--Iconos para el nav-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="shortcut icon" href="./img/logo/52db179069959544738ba98e972df99b.svg " type="image/x-icon">
-
-    <title>Tiendas</title>
+    <!--Links para el mapa y sus markets-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
-     <!--Favicon-->
-     <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
-     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <!--CSS propio-->
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/tiendas.css">
-
-
-
+    <title>Tiendas</title>
 </head>
 
 <body>
@@ -325,25 +314,15 @@
                         🔎 Ver en mapa
                     </a>
             </div> -->
-
-
         </div>
 
-    </div>
-    </div>
-    </div>
-
-
-
-
-
+    </div><!--Fin del container dieteticas-->
     <!--------------------Fin cuerpo----------------------->
 
     <footer class="footer mt-auto py-3 bg-dark container-fluid">
         <span class="text-muted  ms-5 ">Programa desde tu casa. Proyecto final 2021</span>
     </footer>
-
-    <!--------------------MENU FIN-------------------->
+    
     <!--Boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -359,10 +338,5 @@
 
     <script src="../js/dieteticasCoordenadas.js"></script>
     <script src="../js/leaflets.js"></script>
-
-
-
-
 </body>
-
 </html>
