--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                             Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
+                        <a class="nav-link active" href="#sobreNosotros"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button"
@@ -143,7 +143,7 @@
         <div class="row ">
             <div class="col-12">
                 <div class="about-text  mt-5 ">
-                    <h3>Bienvenidos a GreenFood</h3>
+                    <h3>Bienvenidos a Recetas para celíacos</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eius corporis error voluptas
                         quo porro iure neque ea cumque ratione in reprehenderit excepturi corrupti incidunt placeat sed
                         rerum, animi distinctio..Lorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
