--- a/public/tiendas.html
+++ b/public/tiendas.html
@@ -32,7 +32,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid ">
-            <a class="navbar-brand ms-5" href="#">Navbar</a>
+            <a class="navbar-brand ms-5" href="#">Recetas para celíacos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
                             Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-users"></i> Sobre Nosotros</a>
+                        <a class="nav-link active" href="./index.html"><i class="fas fa-users"></i> Sobre Nosotros</a>
                     </li>
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button"
