--- a/public/tiendas.html
+++ b/public/tiendas.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--metasTags propios-->
+    <meta name="keywords" content="celiaquia, recetas, comidas, sin tacc, gluten, dieteticas, locales" />
+
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -85,10 +89,10 @@
     <div id="mapid"></div>
 
 
-    <div class="container px-4 py-5" id="featured-3">
+    <section class="container px-4 py-5" id="featured-3">
         <h2 class=" tiendasListas text-center">Dietéticas</h2>
         <h3 class=" border-bottom tiendasListas" id="caba">CABA</h3>
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">            
             <div class="feature col tiendaNombre">
                 <h5>Dietética Rojas</h5>
                 <p>🏪Dirección: Rojas 12, CABA. <br>
@@ -316,13 +320,14 @@
             </div> -->
         </div>
 
-    </div><!--Fin del container dieteticas-->
+    </section>
+    <!--Fin del container dieteticas-->
     <!--------------------Fin cuerpo----------------------->
 
     <footer class="footer mt-auto py-3 bg-dark container-fluid">
         <span class="text-muted  ms-5 ">Programa desde tu casa. Proyecto final 2021</span>
     </footer>
-    
+
     <!--Boostrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
@@ -339,4 +344,5 @@
     <script src="../js/dieteticasCoordenadas.js"></script>
     <script src="../js/leaflets.js"></script>
 </body>
+
 </html>
