--- a/public/desayuno.html
+++ b/public/desayuno.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--metasTags propios-->
+    <meta name="description" content="recetas para personas con celiaquía" />
+    <meta name="keywords" content="celiaquia, recetas, comidas, sin tacc, sin gluten, brownie,pan, tortas, merienda" />
     <!--Boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -340,9 +343,7 @@
                 </div>
             </div>
         </div> -->
-        </div>
-        <!--Fin row-->
-
+        </div><!--Fin row-->
     </section>
     <!--------------------Fin cuerpo----------------------->
     <footer class="footer mt-auto py-3 bg-dark container-fluid">
