--- a/public/desayuno.html
+++ b/public/desayuno.html
@@ -63,7 +63,7 @@
                             Tiendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/contacto.html" tabindex="-1" aria-disabled="true"> <i
+                        <a class="nav-link active" href="./contacto.html" tabindex="-1" aria-disabled="true"> <i
                                 class="fab fa-contao"></i> Contacto</a>
                     </li>
                 </ul>
