--- a/public/almuerzo.html
+++ b/public/almuerzo.html
@@ -79,8 +79,9 @@
                 <div class="card">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT78m-5VoiAtcmB60FsUOuECVvEskBGynF1cDC4fKDfcKIRdda9lIUGfL3WdAGdxop2neY&usqp=CAU"
                         class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="card-title">&mdash;Premezcla casera&mdash;</h3>
+                    <h3 class="card-title">&mdash;Premezcla casera&mdash; (Ver receta)</h3>
+                    <div class="card-body  toggleCard">
+                        
                         <p class="card-text">La premezcla sin TACC es una mezcla que contiene harinas sin gluten y se
                             utiliza para hacer muchas de las
                             preparaciones que vamos a tener en nuestro sitio web, por eso es importante saber como
@@ -124,8 +125,9 @@
             <div class="col receta">
                 <div class="card">
                     <img src="https://i.ytimg.com/vi/ktJgEvvoRhk/maxresdefault.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="card-title">&mdash;Tapa de empanadas&mdash;</h3>
+                    <h3 class="card-title">&mdash;Tapa de empanadas&mdash;</h3>
+                    <div class="card-body toggleCard">
+                        
                         <ul>
                             <h4>Ingredientes</h4>
                             <li>150 gramos de premezcla sin gluten</li>
@@ -329,7 +331,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-
+    <script src="./js/recetas.js"></script>
 </body>
 
 </html>
